examples/test/testpolicy9210.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9210
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key18: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value36
          key37: value17
          key1: value11
      podSelector:
        matchLabels:
          key32: value36
          key17: value31
